--- a/app/views/new/apprenticeship.html
+++ b/app/views/new/apprenticeship.html
@@ -16,10 +16,12 @@
       },
       items: [{
         value: "Yes",
-        text: "Yes"
+        text: "Yes",
+        checked: checked((code + "-apprenticeship"), "Yes")
       }, {
         value: "No",
-        text: "No"
+        text: "No",
+        checked: checked((code + "-apprenticeship"), "No")
       }]
     }) }}
 
