--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -17,31 +17,40 @@
         },
         items: [{
           value: "English as a foreign language",
-          text: "English as a foreign language"
+          text: "English as a foreign language",
+          checked: checked((code + "-languages"), "English as a foreign language")
         }, {
           value: "French",
-          text: "French"
+          text: "French",
+          checked: checked((code + "-languages"), "French")
         }, {
           value: "German",
-          text: "German"
+          text: "German",
+          checked: checked((code + "-languages"), "German")
         }, {
           value: "Italian",
-          text: "Italian"
+          text: "Italian",
+          checked: checked((code + "-languages"), "Italian")
         }, {
           value: "Japanese",
-          text: "Japanese"
+          text: "Japanese",
+          checked: checked((code + "-languages"), "Japanese")
         }, {
           value: "Mandarin",
-          text: "Mandarin"
+          text: "Mandarin",
+          checked: checked((code + "-languages"), "Mandarin")
         }, {
           value: "Russian",
-          text: "Russian"
+          text: "Russian",
+          checked: checked((code + "-languages"), "Russian")
         }, {
           value: "Spanish",
-          text: "Spanish"
+          text: "Spanish",
+          checked: checked((code + "-languages"), "Spanish")
         }, {
           value: "Urdu",
-          text: "Urdu"
+          text: "Urdu",
+          checked: checked((code + "-languages"), "Urdu")
         }]
       }) }}
 
