--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -15,7 +15,7 @@
             classes: "govuk-fieldset__legend--xl"
           }
         },
-        items: locations
+        items: items
       }) }}
 
       {{ govukButton({
