--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -16,40 +16,51 @@
         items: [{
           value: "September 2021",
           text: "September 2021",
-          selected: true
+          selected: checked((code + "-start-date"), "September 2021")
         }, {
           value: "October 2021",
-          text: "October 2021"
+          text: "October 2021",
+          selected: checked((code + "-start-date"), "October 2021")
         }, {
           value: "November 2021",
-          text: "November 2021"
+          text: "November 2021",
+          selected: checked((code + "-start-date"), "November 2021")
         }, {
           value: "December 2021",
-          text: "December 2021"
+          text: "December 2021",
+          selected: checked((code + "-start-date"), "December 2021")
         }, {
           value: "January 2022",
-          text: "January 2022"
+          text: "January 2022",
+          selected: checked((code + "-start-date"), "January 2022")
         }, {
           value: "February 2022",
-          text: "February 2022"
+          text: "February 2022",
+          selected: checked((code + "-start-date"), "February 2022")
         }, {
           value: "March 2022",
-          text: "March 2022"
+          text: "March 2022",
+          selected: checked((code + "-start-date"), "March 2022")
         }, {
           value: "April 2022",
-          text: "April 2022"
+          text: "April 2022",
+          selected: checked((code + "-start-date"), "April 2022")
         }, {
           value: "May 2022",
-          text: "May 2022"
+          text: "May 2022",
+          selected: checked((code + "-start-date"), "May 2022")
         }, {
           value: "June 2022",
-          text: "June 2022"
+          text: "June 2022",
+          selected: checked((code + "-start-date"), "June 2022")
         }, {
           value: "July 2022",
-          text: "July 2022"
+          text: "July 2022",
+          selected: checked((code + "-start-date"), "July 2022")
         }, {
           value: "August 2022",
-          text: "August 2022"
+          text: "August 2022",
+          selected: checked((code + "-start-date"), "August 2022")
         }]
       }) }}
 
