--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -7,25 +7,32 @@
   text: ""
 }, {
   value: "Primary",
-  text: "Primary"
+  text: "Primary",
+  selected: checked((code + "-subject"), "Primary")
 }, {
   value: "Primary with English",
-  text: "Primary with English"
+  text: "Primary with English",
+  selected: checked((code + "-subject"), "Primary with English")
 }, {
   value: "Primary with Geography and History",
-  text: "Primary with Geography and History"
+  text: "Primary with Geography and History",
+  selected: checked((code + "-subject"), "Primary with Geography and History")
 }, {
   value: "Primary with Mathematics",
-  text: "Primary with Mathematics"
+  text: "Primary with Mathematics",
+  selected: checked((code + "-subject"), "Primary with Mathematics")
 }, {
   value: "Primary with Modern Languages",
-  text: "Primary with Modern Languages"
+  text: "Primary with Modern Languages",
+  selected: checked((code + "-subject"), "Primary with Modern Languages")
 }, {
   value: "Primary with Physical Education",
-  text: "Primary with Physical Education"
+  text: "Primary with Physical Education",
+  selected: checked((code + "-subject"), "Primary with Physical Education")
 }, {
   value: "Primary with Science",
-  text: "Primary with Science"
+  text: "Primary with Science",
+  selected: checked((code + "-subject"), "Primary with Science")
 }] %}
 
 {% set secondaryItems = [{
@@ -33,82 +40,108 @@
   text: ""
 }, {
   value: "Art and design",
-  text: "Art and design"
+  text: "Art and design",
+  selected: checked((code + "-subject"), "Art and design")
 }, {
   value: "Biology",
-  text: "Biology"
+  text: "Biology",
+  selected: checked((code + "-subject"), "Biology")
 }, {
   value: "Business studies",
-  text: "Business studies"
+  text: "Business studies",
+  selected: checked((code + "-subject"), "Business studies")
 }, {
   value: "Chemistry",
-  text: "Chemistry"
+  text: "Chemistry",
+  selected: checked((code + "-subject"), "Chemistry")
 }, {
   value: "Citizenship",
-  text: "Citizenship"
+  text: "Citizenship",
+  selected: checked((code + "-subject"), "Citizenship")
 }, {
   value: "Classics",
-  text: "Classics"
+  text: "Classics",
+  selected: checked((code + "-subject"), "Classics")
 }, {
   value: "Communication and media studies",
-  text: "Communication and media studies"
+  text: "Communication and media studies",
+  selected: checked((code + "-subject"), "Communication and media studies")
 }, {
   value: "Computing",
-  text: "Computing"
+  text: "Computing",
+  selected: checked((code + "-subject"), "Computing")
 }, {
   value: "Dance",
-  text: "Dance"
+  text: "Dance",
+  selected: checked((code + "-subject"), "Dance")
 }, {
   value: "Design and technology",
-  text: "Design and technology"
+  text: "Design and technology",
+  selected: checked((code + "-subject"), "Design and technology")
 }, {
   value: "Drama",
-  text: "Drama"
+  text: "Drama",
+  selected: checked((code + "-subject"), "Drama")
 }, {
   value: "Economics",
-  text: "Economics"
+  text: "Economics",
+  selected: checked((code + "-subject"), "Economics")
 }, {
   value: "English",
-  text: "English"
+  text: "English",
+  selected: checked((code + "-subject"), "English")
 }, {
   value: "English literature",
-  text: "English literature"
+  text: "English literature",
+  selected: checked((code + "-subject"), "English literature")
 }, {
   value: "Geography",
-  text: "Geography"
+  text: "Geography",
+  selected: checked((code + "-subject"), "Geography")
 }, {
   value: "Health and social care",
-  text: "Health and social care"
+  text: "Health and social care",
+  selected: checked((code + "-subject"), "Health and social care")
 }, {
   value: "History",
-  text: "History"
+  text: "History",
+  selected: checked((code + "-subject"), "History")
 }, {
   value: "Mathematics",
-  text: "Mathematics"
+  text: "Mathematics",
+  selected: checked((code + "-subject"), "Mathematics")
 }, {
   value: "Modern languages",
-  text: "Modern languages"
+  text: "Modern languages",
+  selected: checked((code + "-subject"), "Modern languages")
 }, {
   value: "Music",
-  text: "Music"
+  text: "Music",
+  selected: checked((code + "-subject"), "Music")
 }, {
   value: "Physical education",
-  text: "Physical education"
+  text: "Physical education",
+  selected: checked((code + "-subject"), "Physical education")
 }, {
   value: "Physics",
-  text: "Physics"
+  text: "Physics",
+  selected: checked((code + "-subject"), "Physics")
 }, {
   value: "Psychology",
-  text: "Psychology"
+  text: "Psychology",
+  selected: checked((code + "-subject"), "Psychology")
 }, {
   value: "Religious education",
-  text: "Religious education"
+  text: "Religious education",
+  selected: checked((code + "-subject"), "Religious education")
 }, {
   value: "Science",
-  text: "Science"
+  text: "Science",
+  selected: checked((code + "-subject"), "Science")
 }, {
   value: "Social sciences",
-  text: "Social sciences"
+  text: "Social sciences",
+  selected: checked((code + "-subject"), "Social sciences")
 }] %}
 
 {% block content %}
