--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -17,13 +17,16 @@
         },
         items: [{
           value: "Fee paying (no salary)",
-          text: "Fee paying (no salary)"
+          text: "Fee paying (no salary)",
+          selected: checked((code + "-type"), "Fee paying (no salary)")
         }, {
           value: "Salaried",
-          text: "Salaried"
+          text: "Salaried",
+          selected: checked((code + "-type"), "Salaried")
         }, {
           value: "Teaching apprenticeship (with salary)",
-          text: "Teaching apprenticeship (with salary)"
+          text: "Teaching apprenticeship (with salary)",
+          selected: checked((code + "-type"), "Teaching apprenticeship (with salary)")
         }]
       }) }}
 
