--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -18,6 +18,7 @@
         items: [{
           value: "PGCE with QTS",
           text: "PGCE with QTS",
+          checked: checked((code + "-outcome"), "PGCE with QTS"),
           label: {
             classes: "govuk-label--s"
           },
@@ -27,6 +28,7 @@
         }, {
           value: "QTS",
           text: "QTS",
+          checked: checked((code + "-outcome"), "QTS"),
           label: {
             classes: "govuk-label--s"
           },
@@ -36,6 +38,7 @@
         }, {
           value: "PGDE with QTS",
           text: "PGDE with QTS",
+          checked: checked((code + "-outcome"), "PGDE with QTS"),
           label: {
             classes: "govuk-label--s"
           },
