--- a/app/views/new/placement-policy.html
+++ b/app/views/new/placement-policy.html
@@ -18,6 +18,7 @@
         items: [{
           value: "hosted",
           text: "Candidates can choose a lead or host school",
+          checked: checked((code + "-placement-policy"), "hosted"),
           conditional: {
             html: govukCharacterCount({
               id: code + "-placement-policy-hosted",
@@ -34,6 +35,7 @@
         }, {
           value: "placed",
           text: "Placements are arranged with candidates before their training starts",
+          checked: checked((code + "-placement-policy"), "placed"),
           conditional: {
             html: govukCharacterCount({
               id: code + "-placement-policy-placed",
@@ -50,6 +52,7 @@
         }, {
           value: "other",
           text: "Other",
+          checked: checked((code + "-placement-policy"), "other"),
           conditional: {
             html: govukCharacterCount({
               id: code + "-placement-policy-other",
