--- a/app/views/new/training-location.html
+++ b/app/views/new/training-location.html
@@ -6,9 +6,6 @@
   <form action="{{ paths.next }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {{ govukRadios({
-        hint: {
-          text: "Academic training is teaching that takes place outside of the classroom"
-        },
         idPrefix: code + "-training-location",
         name: code + "-training-location",
         fieldset: {
@@ -21,6 +18,7 @@
         items: [{
           value: "Leeds West Academy",
           text: "Leeds West Academy",
+          checked: checked((code + "-training-location"), "Leeds West Academy"),
           label: {
             classes: 'govuk-label--s'
           },
@@ -31,10 +29,12 @@
           divider: "or"
         }, {
           value: "At the school where the candidate is based",
-          text: "At the school where the candidate is based"
+          text: "At the school where the candidate is based",
+          checked: checked((code + "-training-location"), "At the school where the candidate is based")
         }, {
           value: "Remotely",
-          text: "Remotely"
+          text: "Remotely",
+          checked: checked((code + "-training-location"), "Remotely")
         }]
       }) }}
 
