Link "view online" to preview (for testing)
This might make it easier to user-test making changes to published courses (as otherwise you can't see how it’ll appear on Find)

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -161,7 +161,7 @@
         {% if nextCycle %}
           Yes – in October
         {% else %}
-          <a href="#">Yes – view online</a>
+          <a href="/preview/{{ linkPath }}">Yes – view online</a>
         {% endif %}
       {% else %}
         No – still in draft
