Remove some of the UCAS references
This removes the references to UCAS being updated overnight.

--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -63,7 +63,7 @@
   {% if justEditedAndPublished %}
     {% set createdHtml %}
       <h3 class="govuk-notification-banner__heading">Your changes have been published</h3>
-      <p class="govuk-body">Your changes are now <a class="govuk-notification-banner__link" href="#">live on Find</a>. They will be updated overnight on UCAS Apply.</p>
+      <p class="govuk-body">Your changes are now <a class="govuk-notification-banner__link" href="#">live on Find</a>.</p>
       {% if course.titleRequested %}
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         <h3 class="govuk-heading-m">Your request for a new title is being reviewed</h3>
