--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -106,7 +106,7 @@
         {% endif %}
 
         <div class="govuk-!-margin-top-8">
-          <p>Changes will appear on Find straight away. UCAS Apply will be updated overnight.</p>
+          <p>Changes will appear on Find straight away.</p>
 
           {% if data[course.programmeCode + '-multi-location'] %}
             <input type="submit" class="govuk-button" value="Publish changes" />
