--- a/app/views/course/withdraw.html
+++ b/app/views/course/withdraw.html
@@ -14,7 +14,7 @@
         <p>Withdrawing this course will:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>immediately remove it from Find</li>
-          <li>close applications for it (this happens when UCAS Apply updates overnight)</li>
+          <li>close applications for it</li>
         </ul>
 
         <p>Once you’ve withdrawn a course, you can’t publish it again this cycle.</p>
