--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -31,7 +31,7 @@
         Your changes have been published
       </h3>
       <p class="govuk-!-margin-bottom-0">
-        Changes will appear on courses in Find straight away.<br />UCAS Apply will be updated overnight.
+        Changes will appear on courses in Find straight away.
       </p>
     </div>
   {% endif %}
