Update course error messages

--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -19,7 +19,7 @@
   {% else %}
     {% if showErrors %}
       {% set placementPolicyError = error(code + "-placement-policy", errors) %}
-      <a href={{ placementPolicyError.href }}>{{ placementPolicyError.text }}</a>
+      <a class="govuk-link" href={{ placementPolicyError.href }}>{{ placementPolicyError.text }}</a>
     {% else %}
       Unknown
     {% endif %}
@@ -42,7 +42,7 @@
   {% else %}
     {% if showErrors %}
       {% set trainingLocationError = error(code + "-training-location", errors) %}
-      <a href={{ trainingLocationError.href }}>{{ trainingLocationError.text }}</a>
+      <a class="govuk-link" href={{ trainingLocationError.href }}>{{ trainingLocationError.text }}</a>
     {% else %}
       Unknown
     {% endif %}
@@ -244,7 +244,7 @@
         text: "Change",
         visuallyHiddenText: "how placements work"
       }]
-    } if showChangeLinks and not placementPolicyError
+    } if showChangeLinks and not value(code + "-placement-policy")
   },
 
   {
