--- a/app/views/new/placement-policy.html
+++ b/app/views/new/placement-policy.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "School placements" %}
+{% set title = "What is your school placement policy?" %}
 {% set backLink = paths.back %}
 
 {% block content %}
